added blocking logic